feat: v3.9.0  new operators, insertMany, first/exists/groupBy, close
Features:
- Added , ,  query operators
- Added insertMany() for bulk inserts (transactional)
- Added .first() alias, .exists() boolean check, .groupBy()
- Added db.close() for resource cleanup

Fixes:
- SQL identifier quoting (prevents reserved-word issues)
- Native db.transaction() (was manual BEGIN/COMMIT/ROLLBACK)
- Removed redundant SELECT in deleteEntity
- Fixed empty WHERE clause with  empty array
- Deduped count() WHERE logic via compileIQO

Tests: 95  117 (22 new tests in new-features.test.ts)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sqlite-zod-orm",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "description": "Type-safe SQLite ORM for Bun — Zod schemas, fluent queries, auto relationships, zero SQL",
   "type": "module",
   "main": "./dist/index.js",
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target bun --format esm",
+    "clean": "rm -rf dist",
     "test": "bun test",
+    "bench": "bun bench/triggers-vs-naive.ts && bun bench/poll-strategy.ts && bun bench/indexes.ts",
     "prepublishOnly": "bun run build"
   },
   "files": [
