feat: v3.24  measure-fn instrumentation + increment/decrement
- Integrated measure-fn for automatic operation timing
- debug: true  full observability via [satidb:*] prefixed logs
- debug: false  zero overhead, direct execution
- Init steps, insert, insertMany all measured

Tests: 250 passing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sqlite-zod-orm",
-  "version": "3.23.0",
+  "version": "3.24.0",
   "description": "Type-safe SQLite ORM for Bun — Zod schemas, fluent queries, auto relationships, zero SQL",
   "type": "module",
   "main": "./dist/index.js",
@@ -49,6 +49,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "measure-fn": "^3.3.0",
     "zod": "^3.25.67"
   },
   "engines": {
